04-linux-containers/voting-app-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: votelocal
  namespace: default
spec:
  rules:
    - host: "vote.ht2021.local"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: vote
              port:
                number: 80
    - host: "result.ht2021.local"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: result
              port:
                number: 80
